k8s/overlays/production/app-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: save-app
  namespace: save-app
spec:
  template:
    spec:
      containers:
      - name: save-app
        resources:
          requests:
            memory: "1Gi"
            cpu: "1000m"
          limits:
            memory: "2Gi"
            cpu: "2000m"
